--- a/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -11,30 +11,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.myfirstapp.myfirstapp.MainActivity">
 
-    <ImageView
-        android:id="@+id/imageViewCat"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/textViewOutput"
-        android:scaleType="centerCrop"
-        android:src="@drawable/cat"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/textViewOutput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editTextInput"
-        android:layout_marginTop="20dp"
-        android:text="Hello World!"
-        android:textSize="24sp"/>
+        android:layout_above="@+id/editTextInput"/>
 
     <EditText
         android:id="@+id/editTextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button"
-        android:hint="Password"/>
+        android:hint="Search for ..."/>
 
     <Button
         android:id="@+id/button"
